added css and sorting

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
             <div ng-controller="TableCtrl">
-                <table class="table table-bordered">
+                <table class="table table-bordered table-striped table-hover">
                     <thead>
                         <tr>
                             <th>Machine Name</th>
