--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,13 +19,22 @@
             padding: 40px 15px;
             text-align: center;
         }
+
+        .highlight {
+            background-color: #B6BF64;
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <button type="button"
+                        class="navbar-toggle collapsed"
+                        data-toggle="collapse"
+                        data-target="#navbar"
+                        aria-expanded="false"
+                        aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -46,36 +55,58 @@
         </div>
         <div class="row">
             <div ng-controller="TableCtrl">
-                <table class="table table-bordered table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>Machine Name</th>
-                            <th>Top Defect Cavity</th>
-                            <th>Current Inspect</th>
-                            <th>Current Reject</th>
-                            <th>Reject History</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="machine in machines" ng-if="$index < 3" ng-click="showChart($event,machine)">
-                            <td scope="row">{{machine.machineName}}</td>
-                            <td>{{machine.topDefectCavity}}</td>
-                            <td>{{machine.currentInspectCount}}</td>
-                            <td>{{machine.currentRejectCount}}</td>
-                            <td><div class="inlinesparkline" data-sparkline="{{machine.rejectHistorySparkline}}"></div></td>
-                        </tr>
-                        <tr>
-                            <td scope="row">...</td>
-                            <td>...</td>
-                            <td>...</td>
-                            <td>...</td>
-                            <td>...</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Defects</div>
+                    <div class="panel-body">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <label for="orderBySelect">OrderBy</label>
+                                <select ng-model="orderBy" class="form-control" id="orderBySelect" ng-change="orderByChanged($event)">
+                                    <option value="order">Order</option>
+                                    <option value="machineName">Machine Name</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="limitToSelect">Show</label>
+                                <select ng-model="limitTo" class="form-control" id="limitToSelect" ng-change="limitToChanged($event)">
+                                    <option value="3">3</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <table class="table table-bordered table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>Machine Name</th>
+                                <th>Top Defect Cavity</th>
+                                <th>Current Inspect</th>
+                                <th>Current Reject</th>
+                                <th>Reject History</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!--<tr ng-repeat="machine in machines " ng-if="$index < 3" ng-click="showChart($event,machine)">-->
+                            <tr ng-repeat="machine in machines | orderBy: orderBy | limitTo: limitTo" ng-click="showChart($event,machine)">
+                                <td scope="row">{{machine.machineName}}</td>
+                                <td>{{machine.topDefectCavity}}</td>
+                                <td>{{machine.currentInspectCount}}</td>
+                                <td>{{machine.currentRejectCount}}</td>
+                                <td><div class="inlinesparkline" data-sparkline="{{machine.rejectHistorySparkline}}"></div></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">...</td>
+                                <td>...</td>
+                                <td>...</td>
+                                <td>...</td>
+                                <td>...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        
-        </div>        
+
+        </div>
         <div class="row">
             <div class="panel panel-default">
                 <div id="chartTitle" class="panel-heading">Chart</div>
